Issue IMCMS-429: Design etc in document editor - Added style align text on center in buttons;

--- a/src/main/webapp/css/document_editor/imcms-document-editor-head.css
+++ b/src/main/webapp/css/document_editor/imcms-document-editor-head.css
@@ -11,6 +11,7 @@
 }
 
 .imcms-document-editor-head-tool__button {
+    text-align: center;
     padding: 13px 17px;
     width: 100%;
 }
